@@ -20,7 +20,7 @@ package org.araneaframework.uilib.form.control;
 /**
  * This control represents a checkbox.
  * 
- * @author <a href="mailto:ekabanov@webmedia.ee">Jevgeni Kabanov</a>
+ * @author Jevgeni Kabanov (ekabanov <i>at</i> araneaframework <i>dot</i> org)
  * 
  */
 public class CheckboxControl extends StringRequestControl{   
@@ -57,7 +57,7 @@ public class CheckboxControl extends StringRequestControl{
    * This method makes a <code>Boolean</code> out of a <code>String</code>.
    */
   protected Object fromRequest(String parameterValue) {
-    return new Boolean(parameterValue);
+    return Boolean.valueOf(parameterValue);
   }
   
   /**
